--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
+#File uploading configuration
+#Multipart configuration
+
+#Enabling multipart uploads
+spring.servlet.multipart.enabled=true
+
+#Maximum size of the file
+spring.servlet.multipart.max-file-size=300MB
+
+#Threshold 
+
+spring.servlet.multipart.file-size-threshold=2KB
+
+
+
+#Database Connection
 spring.datasource.name=Rest_Api
 spring.datasource.url=jdbc:mysql://localhost:3306/Rest_Api
 spring.datasource.username=root
